# bookstore-docker-django-withHeroku

./: .dockerignore  .gitignore  docker-compose.yml  dockerfile  heroku.yml  manage.py  pyproject.toml
accounts/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
accounts/migrations/: 0001_initial.py
books/: admin.py  apps.py  forms.py  models.py  tests.py  urls.py  views.py
books/migrations/: 0001_initial.py  0002_review.py  0003_book_cover.py  0004_book_images.py  0005_remove_book_images.py  0006_images.py  0007_alter_review_options_alter_book_cover_and_more.py
django_project/: settings.py  urls.py
pages/: models.py  tests.py  urls.py  views.py
static/css/: base.css
staticfiles/: staticfiles.json
staticfiles/js/: base.b42da6532d42.js
templates/: _base.html  about.html  home.html
templates/account/: email_confirm.html  login.html  logout.html  password_reset.html  password_reset_done.html  password_reset_from_key.html  password_reset_from_key_done.html  signup.html
templates/account/email/: email_confirmation_message.txt
templates/books/: book_detail.html  book_list.html  search_result.html
templates/registration/: login.html  signup.html
templates/socialaccount/: signup.html
