[tool.poetry]
name = "ch4-bookstore"
version = "0.1.0"
description = ""
authors = ["Jose Rojas <joseyx041199@gmail.com>"]
readme = "README.md"
packages = [{include = "ch4_bookstore"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.2"
psycopg2-binary = "^2.9.4"
django-crispy-forms= "^1.14.0"
crispy-bootstrap5= "^0.6"
django-allauth= "0.50.0"
environs = {extras = ["django"], version = "^9.5.0"}
pillow = "^9.2.0"
django-debug-toolbar = "^3.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
